Migrate to multi-module project to separate examples (#92)